# klipper-cam-sight

./: .env.example  .gitignore  Makefile  README.md  install.py  install.sh  pyproject.toml
.github/workflows/: frontend.yml  python.yml
component/: cam_sight.py  motion.py
docs/: mainsail-nav.example.json
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: ActionBar.tsx  BackendSelect.tsx  CameraPanel.tsx  EditLockButton.tsx  ErrorBoundary.tsx  Help.tsx  MacrosPanel.tsx  MotionSettings.tsx  OffsetsPanel.tsx  ThemePicker.tsx  WebcamSelect.tsx  WizardNav.tsx
frontend/src/lib/: backends.ts  camSightClient.ts  cameraFooter.ts  devBackend.ts  devStatus.ts  theme.ts
frontend/src/stores/: session.ts  theme.ts  useSessionEffects.ts
klipper_macro/: cam_sight.cfg
lib/: __init__.py  cache.py  geometry.py  klippy_probe.py  session.py  status_builder.py  tool_backend.py
typings/moonraker/: common.pyi  confighelper.pyi  eventloop.pyi  loghelper.pyi  server.pyi
typings/moonraker/components/: analysis.pyi  announcements.pyi  application.pyi  authorization.pyi  button.pyi  data_store.pyi  database.pyi  dbus_manager.pyi  extensions.pyi  gpio.pyi  history.pyi  http_client.pyi  job_queue.pyi  job_state.pyi  klippy_apis.pyi  klippy_connection.pyi  ldap.pyi  machine.pyi  mqtt.pyi  notifier.pyi  octoprint_compat.pyi  paneldue.pyi  power.pyi  proc_stats.pyi  secrets.pyi  sensor.pyi  shell_command.pyi  simplyprint.pyi  spoolman.pyi  td1.pyi  template.pyi  (+4 more)
(+26 files in other folders)
